
x.y.z-CURRENT-UNSTABLE "t.b.n." : t.b.d.
 --- This is expected to become a new major release once the TODO
 --- tasks are finished in circa mid/late-2024.
***TODO***:
 - Make sure the server still runs on Net/Open/FreeBSD.
 - Check functioning of "posting (not) allowed" flag when using the
   MySQL database.
 - Excessive testing of the POST function because of the removed
   memory leaks.
 - Add TLS support by merging best of the two TLS branches into the
   main branch.
ADDED FEATURES:
 - Finally, the "posting allowed" flag is considered in POST :)
 - EXPERIMENTAL:
   - EXP: Added Postgres database support (experimental), thanks to
     Christian Barthel for providing a massive patch!
   - EXP: Added option to store unique message ID and message body in
     the DB (postgres only), thanks to Christian Barthel for providing
     the patch!
   - EXP: Docker environment for development purposes was provided by
     Sven Liebert (@SvenLie) -- thanks for that!
FIXES:
 - Fixed some memory leaks during postings that would occur on rather
   rare errors.
 - Once xhdr requested "date", all following responses were interpreted
   as "date" format, too.  Solved this by resettting inf->speccmd = 0;
 - Make sure that Sqlite3 statements with quotes are double-escaped to
   prevent SQL injections. *** security fix ***
 - Fix database check in src/include/main.h, thx to @Christian Barthel.
 - Improved error handling in multiple locations.
 - Fix OpenBSD compiler error and use cc instead of gcc under Open/Net/
   FreeBSD.
MISC:
 - Applied NetBSD pkgsrc patch for err feature and for lexer/parser
   functions from Michael Baeuerle; thx for that!
   (reference: https://github.com/jgoerzen/libnbcompat)
 - Applied NetBSD pkgsrc patch to handle VERSION macro definition that
   is also introduced by libmash from Michael Baeuerle; thx for that!
 - Updated SBo script to work with v. 2.1.3; fixed bug that made
   /usr/doc/wendzelnntpd-$ver/docs inaccessible (+x permission was
   missing)