@@ -28,26 +28,107 @@ database-password mypass
 ; network interfaces.
 
 <connector>
+    ;; enables STARTTLS for this port
+    ;enable-starttls
     port		119
     listen	    127.0.0.1
+    ;; configure SSL server certificate
+    ;tls-server-certificate "/usr/local/etc/ssl/server.crt"
+    ;; configure SSL private key
+    ;tls-server-key "/usr/local/etc/ssl/server.key"
+    ;; configure SSL CA certificate
+    ;tls-ca-certificate "/usr/local/etc/ssl/ca.crt"
+    ;; configure TLS ciphers for TLSv1.3
+    ;tls-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
+    ;; configure TLS ciphers for TLSv1.1 and TLSv1.2
+    ;tls-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+    ;; configure allowed TLS version (1.0-1.3)
+    ;tls-version "1.2-1.3"
+    ;; possibility to force the client to authenticate with client certificate (none | optional | require)
+    ;tls-verify-client "required"
+    ;; define depth for checking client certificate
+    ;tls-verify-client-depth 0
+    ;; possibility to use certificate revocation list (none | leaf | chain)
+    ;tls-crl "none"
+    ;tls-crl-file "/usr/local/etc/ssl/ssl.crl"
 </connector>
 
 <connector>
-    enable-starttls
+    ;; enables STARTTLS for this port
+    ;enable-starttls
     port		119
     listen	    ::1
+    ;; configure SSL server certificate
+    ;tls-server-certificate "/usr/local/etc/ssl/server.crt"
+    ;; configure SSL private key
+    ;tls-server-key "/usr/local/etc/ssl/server.key"
+    ;; configure SSL CA certificate
+    ;tls-ca-certificate "/usr/local/etc/ssl/ca.crt"
+    ;; configure TLS ciphers for TLSv1.3
+    ;tls-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
+    ;; configure TLS ciphers for TLSv1.1 and TLSv1.2
+    ;tls-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+    ;; configure allowed TLS version (1.0-1.3)
+    ;tls-version "1.2-1.3"
+    ;; possibility to force the client to authenticate with client certificate (none | optional | require)
+    ;tls-verify-client "required"
+    ;; define depth for checking client certificate
+    ;tls-verify-client-depth 0
+    ;; possibility to use certificate revocation list (none | leaf | chain)
+    ;tls-crl "none"
+    ;tls-crl-file "/usr/local/etc/ssl/ssl.crl"
 </connector>
 
 <connector>
-    enable-tls
+    ;; enables TLS for this port
+    ;enable-tls
     port		563
     listen	    127.0.0.1
+    ;; configure SSL server certificate
+    ;tls-server-certificate "/usr/local/etc/ssl/server.crt"
+    ;; configure SSL private key
+    ;tls-server-key "/usr/local/etc/ssl/server.key"
+    ;; configure SSL CA certificate
+    ;tls-ca-certificate "/usr/local/etc/ssl/ca.crt"
+    ;; configure TLS ciphers for TLSv1.3
+    ;tls-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
+    ;; configure TLS ciphers for TLSv1.1 and TLSv1.2
+    ;tls-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+    ;; configure allowed TLS version (1.0-1.3)
+    ;tls-version "1.2-1.3"
+    ;; possibility to force the client to authenticate with client certificate (none | optional | require)
+    ;tls-verify-client "required"
+    ;; define depth for checking client certificate
+    ;tls-verify-client-depth 0
+    ;; possibility to use certificate revocation list (none | leaf | chain)
+    ;tls-crl "none"
+    ;tls-crl-file "/usr/local/etc/ssl/ssl.crl"
 </connector>
 
 <connector>
-    enable-tls
+    ;; enables TLS for this port
+    ;enable-tls
     port		563
     listen	    ::1
+    ;; configure SSL server certificate
+    ;tls-server-certificate "/usr/local/etc/ssl/server.crt"
+    ;; configure SSL private key
+    ;tls-server-key "/usr/local/etc/ssl/server.key"
+    ;; configure SSL CA certificate
+    ;tls-ca-certificate "/usr/local/etc/ssl/ca.crt"
+    ;; configure TLS ciphers for TLSv1.3
+    ;tls-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
+    ;; configure TLS ciphers for TLSv1.1 and TLSv1.2
+    ;tls-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+    ;; configure allowed TLS version (1.0-1.3)
+    ;tls-version "1.2-1.3"
+    ;; possibility to force the client to authenticate with client certificate (none | optional | require)
+    ;tls-verify-client "required"
+    ;; define depth for checking client certificate
+    ;tls-verify-client-depth 0
+    ;; possibility to use certificate revocation list (none | leaf | chain)
+    ;tls-crl "none"
+    ;tls-crl-file "/usr/local/etc/ssl/ssl.crl"
 </connector>
 
 ; Uncomment 'verbose-mode' if you want to find errors or if you
