@@ -30,21 +30,28 @@ database-password mypass
 ; Possibility to make TLS mandatory
 tls-is-mandatory
 
-; Connector without STARTTLS
+; Connector without encryption
 <connector>
     port		118
     listen	    0.0.0.0
 </connector>
 
 <connector>
+    ;enables STARTTLS for this port
     enable-starttls
     port		119
     listen	    0.0.0.0
+    ; configure SSL server certificate
     tls-server-certificate "/usr/local/etc/ssl/server.crt"
+    ; configure SSL private key
     tls-server-key "/usr/local/etc/ssl/server.key"
+    ; configure SSL CA certificate
     tls-ca-certificate "/usr/local/etc/ssl/ca.crt"
+    ; configure TLS ciphers for TLSv1.3
     tls-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
+    ; configure TLS ciphers for TLSv1.1 and TLSv1.2
     tls-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+    ; configure allowed TLS version (1.0-1.3)
     tls-version "1.2-1.3"
 </connector>
 
