@@ -11,10 +11,10 @@ x.y.z-CURRENT-UNSTABLE "t.b.n." : t.b.d.
    MySQL database.
  - Excessive testing of the POST function because of the removed
    memory leaks.
- - Add TLS support by merging best of the two TLS branches into the
-   main branch.
 ADDED FEATURES:
  - Finally, the "posting allowed" flag is considered in POST :)
+ - New configuration with dedicated connectors
+ - TLS 1.0-1.3 with native connectors and STARTTLS (including mTLS and CRL)
  - EXPERIMENTAL:
    - EXP: Added Postgres database support (experimental), thanks to
      Christian Barthel for providing a massive patch!
@@ -34,6 +34,7 @@ FIXES:
  - Improved error handling in multiple locations.
  - Fix OpenBSD compiler error and use cc instead of gcc under Open/Net/
    FreeBSD.
+ - Signal handler was improved. Some uncaught signals killed the server
 MISC:
  - Applied NetBSD pkgsrc patch for err feature and for lexer/parser
    functions from Michael Baeuerle; thx for that!
@@ -55,6 +56,8 @@ MISC:
    not officially supported.
  - Fixed some typos in CHANGELOG and HISTORY files.
  - Improved the documentation.
+ - Installed atomic switches for SIGTERM and SIGHUP. It is now a 
+   statefull kill. SIGHUP can be used to signal conditions in future.
 
 2.1.3-stable "Friedrichroda" : 17-Apr-2021:
  As usual, every new release gets named after a nice travel location.
